--- a/style.css
+++ b/style.css
@@ -1,3 +1,45 @@
-.text-color {
+.textColor {
     color:aliceblue;
+    background-image: url('wavy-blue-glitter.jpg');
 }
+
+.text-style {
+    font-family: roboto, sans-serif;
+    font-size: larger;
+}
+
+ul {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  li {
+    height: 40vh;
+    flex-grow: 1;
+  }
+  
+  img {
+    max-height: 100%;
+    min-width: 100%;
+    object-fit: cover;
+    vertical-align: bottom;
+  }
+
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .image {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
