--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ ul {
   }
 
   .global-text-style {
-    font-size: larger;
+    font-size: x-large;
     font-family: roboto, sans-serif;
     letter-spacing: 0.5px;
   }
