--- a/style.css
+++ b/style.css
@@ -58,5 +58,6 @@ ul {
     letter-spacing: 0.5px;
   }
   .transparent{
+    color:aliceblue;
     background-image: url('wavy-blue-glitter.jpg');
   }
